# Embedded-Template

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.c
